<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Tweet</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="title_activity_timeline">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Tweet Item -->
    <string name="tweet_screenname">"@wilw"</string>
    <string name="tweet_name">Wil Wheaton</string>
    <string name="tweet_body">Missed the East Coast showing of @wilwproject because I was writing @CAH cards with the brilliant Cards Against Humanity tean. TO THE DVR!</string>
    <string name="tweet_media_description">Image embedded inside tweet</string>
    <string name="tweet_created_at">22m</string>


    <!-- Timeline Action Bar -->
    <string name="compose">compose</string>
    <string name="title_activity_compose">""</string>
    <string name="menu_send_tweet">TWEET</string>
    <string name="profile">profile</string>

    <!-- Compose -->
    <string name="compose_name">Nathan</string>
    <string name="compose_screenname">"@nathan_miso"</string>
    <string name="compose_image_description">User\'s Image</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="char_count">0/140</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Profile -->
    <string name="profile_name">Nathan</string>
    <string name="profile_tagline">Breaking technology news, analysis, and opinions from TechCrunch. The number one guide for all things tech.</string>
    <string name="profile_followers">583</string>
    <string name="profile_followers_label">FOLLOWERS</string>
    <string name="profile_following">399</string>
    <string name="profile_following_label">FOLLOWING</string>
    <string name="profile_num_tweets">1357</string>
    <string name="profile_num_tweets_label">TWEETS</string>
    <string name="profile_description">User\'s profile image</string>
    <string name="profile_background_description">User\'s background profile image</string>


</resources>