<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.simpletwitterclient.activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/rlUserHeader"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/profile_description"
            android:src="@android:drawable/screen_background_light_transparent"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:text="@string/profile_name"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_alignStart="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:text="@string/profile_tagline"
            android:textSize="12sp"
            />

    </RelativeLayout>

    <!-- Counts -->
    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/rlUserHeader"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_followers"
            />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_following"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            />


    </LinearLayout>




    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/llCounts"
        android:id="@+id/flContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        </FrameLayout>
</RelativeLayout>
